# HookCollisionDet

./: .gitignore  README.md
data/: LadderData.h  LadderData.msg
src/HookCollisionDet/: CMakeLists.txt  package.xml
src/HookCollisionDet/include/CSF/: Rasterization.h
src/HookCollisionDet/launch/: HookCollisionDet.launch  hook_det.launch
src/HookCollisionDet/src/: CollisionDetector.cpp  HookLoadPositionAcquirer.cpp  ICPTracker.cpp  livox_test.cpp  utils.cpp
src/HookCollisionDet/src/CSF/: CSF.cpp  Particle.cpp  Rasterization.cpp  point_cloud.cpp
src/hookload_det/: CMakeLists.txt  package.xml
src/hookload_det/data/: extract_pc2.py
src/hookload_det/include/: CollisionDetector.h  HookLoadPositionAcquirer.h  ICPTracker.h  utils.h
src/hookload_det/include/CSF/: CSF.h  c2cdist.h
src/hookload_det/launch/: hook_det.launch
src/hookload_det/src/CSF/: CSF.cpp  Cloth.cpp  Constraint.cpp  XYZReader.cpp  c2cdist.cpp
